# redes-tcp-ip-ufmg-25-1

./: .gitignore  README.md
ed1/: main.tex
ed1/resources/: bibliografia.bib  packages.tex
ed1/sections/: gabaritos.tex  questoes.tex
ed2/: ET2.tex  main2.tex
ed2/resources/: custom_commands.tex  packages.tex
ed2/sections/: questoes.tex
ed3/: main3.tex
ed3/resources/: packages.tex
ed3/sections/: questoes.tex
ed4/: main4.tex
ed4/resources/: bibliografia.bib  front_page.tex  packages.tex
ed4/sections/: questoes.tex
ed5/: main5.tex
ed5/sections/: questoes.tex
trab1/: CMakeLists.txt  README.md  client.c  multi_client.sh  questoes.txt  run.sh  run_clients.sh  server.c
trab2/: CMakeLists.txt  questao.txt  results.toml  run_local.sh  run_server.sh  run_test.sh
trab2/client/: client.c  client.h
trab2/server/: server.c
trab2/timer/: timer.c  timer.h
